fixed cloud image not showing on live

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -3,7 +3,7 @@
     color: #525252;
     font-family: "Whitney SSm A","Whitney SSm B",sans-serif;
     font-size: 16px;
-    background: url(/assets/images/cloud.jpg) repeat-x #fff;
+
 }
 
 body{
